--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: Samuel Zhao Portfolio
-description: Have Fun with Data and Insights!
+description: Marketing Analytics | Data Analytics | Data Science
 show_downloads: true
 google_analytics: G-93YXP21YQB
