--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: Samuel Zhao Portfolio
-description: Marketing Analytics | Data Analytics | Data Science
+title: Project Portfolio of Samuel Zhao
+description: 
 show_downloads: true
 google_analytics: G-93YXP21YQB
