--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: Samuel Zhao's Project Portfolio
-description: 📧samandzhao@gmail.com  |  📞(737)-296-0548
+description: Exploring Uncertainties and Innovative Solutions!
 show_downloads: true
 google_analytics: G-93YXP21YQB
